remove erb layout. Search partial

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -39,6 +39,7 @@
         .span9
           = bootstrap_flash
           = yield
+          = render 'search'
         .span3
           .well.sidebar-nav
             %h3 Sidebar
