move search partial

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -38,7 +38,7 @@
       .row
         .span9
           = bootstrap_flash
-          -#= render 'search'
+          = render 'search'
           = yield
         .span3
           .well.sidebar-nav
